--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Algorithm and Problem Solving</h1>
     <h2>Date:09-23-2021</h2>
 </body>
-<script src="000_exercise_sorted_challenge.js"></script>
-<!-- <script src="001_pairwise_comperison.js"></script> -->
+<!-- <script src="000_exercise_sorted_challenge.js"></script> -->
+<script src="001_pairwise_comperison.js"></script>
 </html>
