--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Date:09-23-2021</h2>
 </body>
 <!-- <script src="000_exercise_sorted_challenge.js"></script> -->
-<script src="001_pairwise_comperison.js"></script>
+<!-- <script src="001_pairwise_comperison.js"></script> -->
+<script src="002_array_functions.js"></script>
 </html>
