add search array

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 </body>
 <!-- <script src="000_exercise_sorted_challenge.js"></script> -->
 <!-- <script src="001_pairwise_comperison.js"></script> -->
-<script src="002_array_functions.js"></script>
+<!-- <script src="002_array_functions.js"></script> -->
+<script src="003_search_array.js"></script>
 </html>
