add reverse string

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <!-- <script src="000_exercise_sorted_challenge.js"></script> -->
 <!-- <script src="001_pairwise_comperison.js"></script> -->
 <!-- <script src="002_array_functions.js"></script> -->
-<script src="003_search_array.js"></script>
+<!-- <script src="003_search_array.js"></script> -->
+<script src="004_reverse_string.js"></script>
 </html>
