--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <!-- <script src="001_pairwise_comperison.js"></script> -->
 <!-- <script src="002_array_functions.js"></script> -->
 <!-- <script src="003_search_array.js"></script> -->
-<script src="004_reverse_string.js"></script>
+<!-- <script src="004_reverse_string.js"></script> -->
+<script src="005_anagram.js"></script>
 </html>
