--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <!-- <script src="002_array_functions.js"></script> -->
 <!-- <script src="003_search_array.js"></script> -->
 <!-- <script src="004_reverse_string.js"></script> -->
-<script src="005_anagram.js"></script>
+<!-- <script src="005_anagram.js"></script> -->
+<script src="006_fizzbuzz.js"></script>
 </html>
