--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>Algorithm and Problem Solving</h1>
     <h2>Date:09-23-2021</h2>
 </body>
-<!-- <script src="000_exercise_sorted_challenge.js"></script> -->
+<script src="000_exercise_sorted_challenge.js"></script>
 <!-- <script src="001_pairwise_comperison.js"></script> -->
 <!-- <script src="002_array_functions.js"></script> -->
 <!-- <script src="003_search_array.js"></script> -->
 <!-- <script src="004_reverse_string.js"></script> -->
 <!-- <script src="005_anagram.js"></script> -->
-<script src="006_fizzbuzz.js"></script>
+<!-- <script src="006_fizzbuzz.js"></script> -->
 </html>
